# demo-api-svc

./: Cargo.toml  Dockerfile  README.md  example.env
migrations/2022-03-17-190635_init_schema/: up.sql
src/: db.rs  main.rs  schema.rs
src/dal/: mod.rs  org.rs
src/routes/: mod.rs  org.rs
