[package]
name = "demo-api-svc"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["mysql", "extras", "chrono"] }
dotenv = "0.15.0"
serde = "1.0.130"
serde_derive = "1.0.130"
chrono = { version = "0.4.19", features = ["serde"] }
